--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -199,3 +199,255 @@ main {
     }
    
 }
+ 
+// MEDIA QUERIES //
+
+@media screen and (max-width: 768px) {
+ main {
+    .contenedorContacto1 {
+         height: 600px; 
+         .texto-contacto {
+             .p2-contacto {
+                 font-size: 28px;
+             }
+             .p1-contacto {
+                 font-size: 18px;
+             }
+         }               
+    }  
+  
+   .contenedorContacto2 {
+       .imagen1-contacto {
+           height: 350px;
+           width: 350px;
+       }
+       .texto1-contacto {
+           p {
+               margin-right: 20px;
+           }
+       }
+   }
+   .contenedorContacto3 {
+       height: 350px;
+       .imagen2-contacto {
+
+           width: 350px;
+       }
+       .texto2-contacto {
+ 
+           margin: 0;
+        p {
+            margin-left: 20px;
+            padding-top: 0px;
+        }
+        h3 {
+            margin: auto;
+            
+        }
+      }
+     }
+
+   .contenedorFormulario {
+        .formulario {
+            width: 350px;
+            margin-left: 30px;
+        }
+        .contenedorFormulario-texto {
+            width: 300px;
+            h3, h4 {
+                margin-right: 5px;
+            }
+         }
+    }
+
+  } 
+}
+
+@media screen and (max-width: 480px) {
+    main {
+        .contenedorContacto1 {
+             height: 400px; 
+             .texto-contacto {
+                 .p2-contacto {
+                     font-size: 20px;
+                 }
+                 .p1-contacto {
+                     font-size: 16px;
+                     margin: 15px 10px;
+                 }
+                 a {
+                     .button-contacto {
+                         font-size: 14px;
+
+                     }
+                 }
+             }               
+        }  
+      
+       .contenedorContacto2 {
+           height: 600px;
+           grid-template-areas: "texto1-contacto"
+                                 "imagen1-contacto";
+           .imagen1-contacto {
+              width: 100%;
+              grid-row-start: 2;
+              grid-row-end: 3;
+           }
+           .texto1-contacto {
+               height: 300px;
+               grid-row-start: 1;
+               grid-row-end: 2;
+               align-self: center;
+               p {
+                   margin: 20px;
+                   width: 100%;
+                  
+               }
+           }
+       }
+       .contenedorContacto3 {      
+           .imagen2-contacto {
+            background-image: none;
+            display: none;
+           }
+           .texto2-contacto {
+             width: 100%; 
+             height: 300px;
+            p {
+                margin-left: 20px;
+                padding-top: 0px;
+            }
+            h3 {
+                margin: auto;             
+            }
+          }
+       }
+    
+        .contenedorFormulario {
+            height: 900px;
+            grid-template-columns: 1fr;
+            display: grid;
+            .contenedorFormulario-texto {
+            height: 200px;
+             grid-row-start: 1;
+             grid-row-end: 2;
+             grid-column-start: 1;
+             grid-column-end: 2;
+             margin: 0;
+             h3 {
+                 margin: 0px 50px !important;               
+             }            
+            }                     
+            .formulario {
+               margin-bottom: 100px;
+                grid-row-start: 2;
+                grid-row-end: 3;
+                width: 350px;
+                margin-left: 30px;
+            }
+        }   
+     }
+}
+@media screen and (max-width: 375px) {
+    main {
+        .contenedorContacto1 {
+            height: 600px;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr); 
+            grid-template-rows: repeat(3, 1fr);   
+            .vino-contacto {
+                background-image: url("/imagenes/contacto-hamburguesa.jpg");
+                background-position: center;
+                background-size: cover;
+                grid-row-start: 1;
+                grid-column-start: 2;
+                grid-row-end: 2;
+                grid-column-end: 3; 
+                height: 200px;
+            }  
+            .bife-contacto {
+                background-image: url("../imagenes/contacto-bife.jpg");
+                background-position: bottom;
+                background-size: cover;  
+                height: 200px;
+            }
+            .cupcake-contacto {
+                background-image: url("../imagenes/contacto-cupcakes.jpg");
+                background-position: center;
+                background-size: cover;
+                grid-row-start: 3;
+                grid-row-end: 4;
+                grid-column-start: 2;
+                grid-column-end: 3;
+                height: 200px;
+            }
+            .canapes-contacto {
+                background-image: url("../imagenes/contacto-canapes.jpg");
+                background-position: center;
+                background-size: cover; 
+                grid-row-start: 3;
+                grid-row-end: 4;
+                grid-column-start: 1;
+                grid-column-end: 2;
+                height: 200px;
+            }
+            .texto-contacto {
+                grid-row-start: 2;
+                grid-row-end: 3;
+                grid-column-start: 1;
+                grid-column-end: 3;
+                
+            }
+        }
+        .contenedorContacto2 {
+            height: 750px;
+            .texto1-contacto {
+                height: 400px;
+                p {
+                    padding-right: 30px;
+                }
+
+                }
+            }
+        .contenedorContacto3 {
+            display: grid;
+            grid-template-areas: "texto2-contacto"
+                                  "imagen2-contacto";
+           grid-template-rows: 300px, 300px !important;
+            grid-template-columns: 1fr;
+            height: 550px;  
+            .imagen2-contacto {
+                width: 100%;
+               display: inline-block;
+                background-image: url("../imagenes/contacto-restaurante3.jpg");
+                grid-row-start: 2;
+                grid-row-end: 3;
+                grid-column-start: 1;
+                grid-column-end: 2;
+                height: 300px;
+            }
+            .texto2-contacto {
+                padding-left: 30px;
+                height: 250px;
+            }
+        }    
+    .contenedorFormulario {
+        .formulario {
+            margin-left: 10px;
+            padding-left: 10px;
+            width: 300px;
+            padding-bottom: 50px;
+            .boton-formulario {
+                
+                margin-top: 0px;
+            }
+        }
+        .contenedorFormulario-texto {
+            h3, h4 {
+                font-size: 30px;
+            }
+        }
+    }  
+
+ }        
+}
