--- a/sass/_generales.scss
+++ b/sass/_generales.scss
@@ -12,7 +12,7 @@ html{
 $negro: #262526;
 $marronOscuro: #734D3F;
 $marronClaro: #A67458;
-$beige: #302314;
+$beige: #F2CA99;
 $grisaseo: #F2F1F0;
 
 // Tipografia //
